--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header class="header flex">
       <div class="header__text">
         <h1 class="header__heading">10,000+ of our users love our products.</h1>
-        <p class="header__sub">We only provide great products combined with excellent customer service. See what our satisfied customers are saying aout our services.</p>
+        <p class="header__sub">We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
       </div>
 
       <div class="header__ratings">
